LittleNicParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g 2013-04-23 22:24:00

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LittleNicParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "EXEC", "CALL_DEF", "ASSIGNMENT", "DECLARATIONS", "ARGS", "PARAMS", "VAR", "COMMENT", "WS", "TYPE", "BOOL", "IDENTIFIER", "NUMBER", "STRING", "'PROGRAM'", "';'", "'BEGIN'", "'END'", "','", "'('", "')'", "':'", "'FUNCTION'", "':='", "'PROCEDURE'", "'OUTPUT'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int EOF=-1;
    public static final int TYPE=14;
    public static final int T__19=19;
    public static final int IDENTIFIER=16;
    public static final int ARGS=9;
    public static final int VAR=11;
    public static final int COMMENT=12;
    public static final int PARAMS=10;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__44=44;
    public static final int CALL_DEF=6;
    public static final int NUMBER=17;
    public static final int BOOL=15;
    public static final int DECLARATIONS=8;
    public static final int EXEC=5;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int WS=13;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int PROGRAM=4;
    public static final int ASSIGNMENT=7;
    public static final int STRING=18;

    // delegates
    // delegators


        public LittleNicParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LittleNicParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LittleNicParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g"; }


        public ErrorReporter err;
        
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e)
        {
            String msg = getErrorMessage(e, tokenNames);
    	err.reportSyntaxError(e.line, e.charPositionInLine, msg);
        }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:61:2: prog : 'PROGRAM' IDENTIFIER ';' declarations code_block ';' EOF ;
    public final LittleNicParser.prog_return prog() throws RecognitionException {
        LittleNicParser.prog_return retval = new LittleNicParser.prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal1=null;
        Token IDENTIFIER2=null;
        Token char_literal3=null;
        Token char_literal6=null;
        Token EOF7=null;
        LittleNicParser.declarations_return declarations4 = null;

        LittleNicParser.code_block_return code_block5 = null;


        CommonTree string_literal1_tree=null;
        CommonTree IDENTIFIER2_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree EOF7_tree=null;

        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:62:7: ( 'PROGRAM' IDENTIFIER ';' declarations code_block ';' EOF )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:62:9: 'PROGRAM' IDENTIFIER ';' declarations code_block ';' EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal1=(Token)match(input,19,FOLLOW_19_in_prog301); 
            string_literal1_tree = (CommonTree)adaptor.create(string_literal1);
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal1_tree, root_0);

            IDENTIFIER2=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_prog304); 
            IDENTIFIER2_tree = (CommonTree)adaptor.create(IDENTIFIER2);
            adaptor.addChild(root_0, IDENTIFIER2_tree);

            char_literal3=(Token)match(input,20,FOLLOW_20_in_prog306); 
            pushFollow(FOLLOW_declarations_in_prog309);
            declarations4=declarations();

            state._fsp--;

            adaptor.addChild(root_0, declarations4.getTree());
            pushFollow(FOLLOW_code_block_in_prog311);
            code_block5=code_block();

            state._fsp--;

            adaptor.addChild(root_0, code_block5.getTree());
            char_literal6=(Token)match(input,20,FOLLOW_20_in_prog313); 
            EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_prog316); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class code_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "code"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:64:2: code : 'BEGIN' ( statement ( ';' statement )* | ) 'END' ;
    public final LittleNicParser.code_return code() throws RecognitionException {
        LittleNicParser.code_return retval = new LittleNicParser.code_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal8=null;
        Token char_literal10=null;
        Token string_literal12=null;
        LittleNicParser.statement_return statement9 = null;

        LittleNicParser.statement_return statement11 = null;


        CommonTree string_literal8_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree string_literal12_tree=null;

        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:3: ( 'BEGIN' ( statement ( ';' statement )* | ) 'END' )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:5: 'BEGIN' ( statement ( ';' statement )* | ) 'END'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal8=(Token)match(input,21,FOLLOW_21_in_code329); 
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:14: ( statement ( ';' statement )* | )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==IDENTIFIER||LA2_0==21||(LA2_0>=30 && LA2_0<=31)||LA2_0==34) ) {
                alt2=1;
            }
            else if ( (LA2_0==22) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:15: statement ( ';' statement )*
                    {
                    pushFollow(FOLLOW_statement_in_code333);
                    statement9=statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement9.getTree());
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:25: ( ';' statement )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==20) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:26: ';' statement
                    	    {
                    	    char_literal10=(Token)match(input,20,FOLLOW_20_in_code336); 
                    	    pushFollow(FOLLOW_statement_in_code339);
                    	    statement11=statement();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, statement11.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:65:56: 
                    {
                    }
                    break;

            }

            string_literal12=(Token)match(input,22,FOLLOW_22_in_code348); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "code"

    public static class code_block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "code_block"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:67:2: code_block : code -> ^( EXEC ( code )? ) ;
    public final LittleNicParser.code_block_return code_block() throws RecognitionException {
        LittleNicParser.code_block_return retval = new LittleNicParser.code_block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LittleNicParser.code_return code13 = null;


        RewriteRuleSubtreeStream stream_code=new RewriteRuleSubtreeStream(adaptor,"rule code");
        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:68:3: ( code -> ^( EXEC ( code )? ) )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:68:5: code
            {
            pushFollow(FOLLOW_code_in_code_block360);
            code13=code();

            state._fsp--;

            stream_code.add(code13.getTree());


            // AST REWRITE
            // elements: code
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 68:10: -> ^( EXEC ( code )? )
            {
                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:68:13: ^( EXEC ( code )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EXEC, "EXEC"), root_1);

                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:68:20: ( code )?
                if ( stream_code.hasNext() ) {
                    adaptor.addChild(root_1, stream_code.nextTree());

                }
                stream_code.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "code_block"

    public static class full_block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "full_block"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:70:2: full_block : inner_declarations code_block ;
    public final LittleNicParser.full_block_return full_block() throws RecognitionException {
        LittleNicParser.full_block_return retval = new LittleNicParser.full_block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LittleNicParser.inner_declarations_return inner_declarations14 = null;

        LittleNicParser.code_block_return code_block15 = null;



        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:71:3: ( inner_declarations code_block )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:71:5: inner_declarations code_block
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_inner_declarations_in_full_block380);
            inner_declarations14=inner_declarations();

            state._fsp--;

            adaptor.addChild(root_0, inner_declarations14.getTree());
            pushFollow(FOLLOW_code_block_in_full_block382);
            code_block15=code_block();

            state._fsp--;

            adaptor.addChild(root_0, code_block15.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "full_block"

    public static class statement_block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement_block"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:73:2: statement_block : statement -> ^( EXEC ( statement )? ) ;
    public final LittleNicParser.statement_block_return statement_block() throws RecognitionException {
        LittleNicParser.statement_block_return retval = new LittleNicParser.statement_block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LittleNicParser.statement_return statement16 = null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:74:3: ( statement -> ^( EXEC ( statement )? ) )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:74:5: statement
            {
            pushFollow(FOLLOW_statement_in_statement_block395);
            statement16=statement();

            state._fsp--;

            stream_statement.add(statement16.getTree());


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 74:15: -> ^( EXEC ( statement )? )
            {
                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:74:18: ^( EXEC ( statement )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EXEC, "EXEC"), root_1);

                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:74:25: ( statement )?
                if ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement_block"

    public static class declarations_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declarations"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:76:2: declarations : ( declaration ( ';' declaration )* | ) -> ^( DECLARATIONS ( declaration )* ) ;
    public final LittleNicParser.declarations_return declarations() throws RecognitionException {
        LittleNicParser.declarations_return retval = new LittleNicParser.declarations_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal18=null;
        LittleNicParser.declaration_return declaration17 = null;

        LittleNicParser.declaration_return declaration19 = null;


        CommonTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:3: ( ( declaration ( ';' declaration )* | ) -> ^( DECLARATIONS ( declaration )* ) )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:5: ( declaration ( ';' declaration )* | )
            {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:5: ( declaration ( ';' declaration )* | )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==VAR||LA4_0==27||LA4_0==29) ) {
                alt4=1;
            }
            else if ( (LA4_0==21) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:6: declaration ( ';' declaration )*
                    {
                    pushFollow(FOLLOW_declaration_in_declarations418);
                    declaration17=declaration();

                    state._fsp--;

                    stream_declaration.add(declaration17.getTree());
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:18: ( ';' declaration )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==20) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:19: ';' declaration
                    	    {
                    	    char_literal18=(Token)match(input,20,FOLLOW_20_in_declarations421);  
                    	    stream_20.add(char_literal18);

                    	    pushFollow(FOLLOW_declaration_in_declarations423);
                    	    declaration19=declaration();

                    	    state._fsp--;

                    	    stream_declaration.add(declaration19.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:50: 
                    {
                    }
                    break;

            }



            // AST REWRITE
            // elements: declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 77:52: -> ^( DECLARATIONS ( declaration )* )
            {
                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:55: ^( DECLARATIONS ( declaration )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_1);

                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:77:70: ( declaration )*
                while ( stream_declaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaration.nextTree());

                }
                stream_declaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declarations"

    public static class inner_declarations_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "inner_declarations"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:79:2: inner_declarations : ( 'VAR' var_dec ( ';' 'VAR' var_dec )* | ) -> ^( DECLARATIONS ( var_dec )* ) ;
    public final LittleNicParser.inner_declarations_return inner_declarations() throws RecognitionException {
        LittleNicParser.inner_declarations_return retval = new LittleNicParser.inner_declarations_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal20=null;
        Token char_literal22=null;
        Token string_literal23=null;
        LittleNicParser.var_dec_return var_dec21 = null;

        LittleNicParser.var_dec_return var_dec24 = null;


        CommonTree string_literal20_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree string_literal23_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleSubtreeStream stream_var_dec=new RewriteRuleSubtreeStream(adaptor,"rule var_dec");
        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:3: ( ( 'VAR' var_dec ( ';' 'VAR' var_dec )* | ) -> ^( DECLARATIONS ( var_dec )* ) )
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:5: ( 'VAR' var_dec ( ';' 'VAR' var_dec )* | )
            {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:5: ( 'VAR' var_dec ( ';' 'VAR' var_dec )* | )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==VAR) ) {
                alt6=1;
            }
            else if ( (LA6_0==21) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:6: 'VAR' var_dec ( ';' 'VAR' var_dec )*
                    {
                    string_literal20=(Token)match(input,VAR,FOLLOW_VAR_in_inner_declarations452);  
                    stream_VAR.add(string_literal20);

                    pushFollow(FOLLOW_var_dec_in_inner_declarations454);
                    var_dec21=var_dec();

                    state._fsp--;

                    stream_var_dec.add(var_dec21.getTree());
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:20: ( ';' 'VAR' var_dec )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==20) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:21: ';' 'VAR' var_dec
                    	    {
                    	    char_literal22=(Token)match(input,20,FOLLOW_20_in_inner_declarations457);  
                    	    stream_20.add(char_literal22);

                    	    string_literal23=(Token)match(input,VAR,FOLLOW_VAR_in_inner_declarations459);  
                    	    stream_VAR.add(string_literal23);

                    	    pushFollow(FOLLOW_var_dec_in_inner_declarations461);
                    	    var_dec24=var_dec();

                    	    state._fsp--;

                    	    stream_var_dec.add(var_dec24.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:54: 
                    {
                    }
                    break;

            }



            // AST REWRITE
            // elements: var_dec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 80:56: -> ^( DECLARATIONS ( var_dec )* )
            {
                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:59: ^( DECLARATIONS ( var_dec )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_1);

                // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:80:74: ( var_dec )*
                while ( stream_var_dec.hasNext() ) {
                    adaptor.addChild(root_1, stream_var_dec.nextTree());

                }
                stream_var_dec.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "inner_declarations"

    public static class param_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "param_list"
    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:82:2: param_list : ( var_dec ( ',' var_dec )* | );
    public final LittleNicParser.param_list_return param_list() throws RecognitionException {
        LittleNicParser.param_list_return retval = new LittleNicParser.param_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal26=null;
        LittleNicParser.var_dec_return var_dec25 = null;

        LittleNicParser.var_dec_return var_dec27 = null;


        CommonTree char_literal26_tree=null;

        try {
            // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:84:3: ( var_dec ( ',' var_dec )* | )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==IDENTIFIER) ) {
                alt8=1;
            }
            else if ( (LA8_0==25) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:84:5: var_dec ( ',' var_dec )*
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_dec_in_param_list490);
                    var_dec25=var_dec();

                    state._fsp--;

                    adaptor.addChild(root_0, var_dec25.getTree());
                    // C:\\Users\\Alex\\SkyDrive\\Documents\\ECS\\compilers\\LittleNic.g:84:13: ( ',' var_dec )*
